--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,6 +6,7 @@
 html {
 	background: #E0E5EC;
 	overflow: hidden;
+	font-family: Roboto;
 }
 
 .app-wrapper {
@@ -51,15 +52,20 @@ html {
 	padding: 0.3em 2em;
 	text-align: center;
 	cursor: pointer;
-	font-family: sans;
+	font-family: Roboto Condensed;
 	font-weight: bold;
 	font-size: 200%;
 	user-select: none;
+	box-shadow: inset 0 -0.6em 0 -0.45em rgba(0,0,0,0.17);
+	position: relative;
 }
 .button:hover,
 .button:active {
 	background: #2A45AE;
 	color: #FFFFFF;
+}
+.button:active {
+	top: 0.1em;
 }
 
 video {
@@ -72,8 +78,10 @@ video {
 	transform: scale(0.3);
 	transition: opacity 300ms linear, transform 300ms linear;
 	background: #000;
+	pointer-events: none;
 }
 .show {
 	opacity: 1 !important;
 	transform: scale(1) !important;
+	pointer-events: auto !important;
 }
