--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,12 +6,11 @@
 
 html {
 	background: #E0E5EC;
-	overflow: hidden;
 	font-family: Roboto;
 }
 
 .app-wrapper {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
