--- a/assets/styles.css
+++ b/assets/styles.css
@@ -86,12 +86,13 @@ html {
 	top: 0.1em;
 }
 
-video {
+/* video {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 1500;
 	opacity: 0;
 	transform: scale(0.3);
 	transition: opacity 300ms linear, transform 300ms linear;
@@ -103,7 +104,7 @@ video {
 	opacity: 1 !important;
 	transform: scale(1) !important;
 	pointer-events: auto !important;
-}
+} */
 
 .bookList {
 	border-spacing: 7px;
